removed quotation marks from text [string] type values

--- a/Game/Game/config.ini
+++ b/Game/Game/config.ini
@@ -3,19 +3,20 @@
 [AppWindowConfig]
 Width=1280
 Length=720
-tRatio="16:9"
+tRatio=16:9
 TextureScalingCoefficient=4
-tWindowTitle="Escape from the Island"
+tWindowTitle=Escape from the Island
+fpsCap=60
 
 [AppConfig]
-tAppDir="default"
+tAppDir=default
 bRuntimeLogEnabled=true
-tLogDir="logs"
+tLogDir=logs
 
 [AppAssetConfig]
-tGraphicsDir="graphics"
-tTextureFormat="png"
-tPlayerTextures="PlayerTextures.db"
+tGraphicsDir=graphics
+tTextureFormat=png
+tPlayerTextures=PlayerTextures.db
 PlayerTexturesCount=12
-tLevel1Textures="Level1Textures.db"
+tLevel1Textures=Level1Textures.db
 Level1TexturesCount=3
