some small rearrangements in the config file + added basic config file content db

--- a/Game/Game/config.ini
+++ b/Game/Game/config.ini
@@ -17,6 +17,8 @@ tLogDir=logs
 tGraphicsDir=graphics
 tTextureFormat=png
 tPlayerTextures=PlayerTextures.db
-PlayerTexturesCount=12
+PlayerTexturesWidth=32
+PlayerTexturesLength=32
 tLevel1Textures=Level1Textures.db
-Level1TexturesCount=3
+Level1TexturesWidth=320
+Level1TexturesLength=180
