--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -148,6 +148,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="background_thread.cpp" />
     <ClCompile Include="player_thread.cpp" />
     <ClCompile Include="error_handle.cpp" />
     <ClCompile Include="game_loop_thread.cpp" />
